--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ h1{
   body{
 background-image: url(./bg-intro-mobile.png);
 height: 100%;
+width: 100%;
   }
   .main-container{
     width: 100%;
@@ -133,26 +134,35 @@ height: 100%;
   }
 .main-text{
   margin: 0;
-  width:50vw;
-  font-size: 0.8rem;
-  text-align: center;
+  width:100%;
+  padding-right: 30px;
+  padding-left: 30px;
+  font-size:1rem;
+  text-align:center;
 }
 form{
   width: 100%;
 }
 .first-btn{
-  width:38vw ;
+  width:100%;
   height: 15vh;
   text-align: center;
   
 }
 .second-btn{
-  width: 35vw;
+  width:100%;
+}
+form div{
+  width: 100%;
 }
 form input{
-  width: 35vw;
+  width: 100%;
 }
 .p-text{
   text-align: center;
+}
+.form-container{
+  width: 100%;
+  padding: 10px;
 }
 }
